[java] Remove use Guava ImmutableMap